--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
 <h1>About</h1>
 <p><strong>Email: </strong> Please make sure you are Loged In
-<h3>I love ruby on rails</h3>
+<h3>I love ruby on rails, please subscribe my email <button>Subscribe Email</button></h3>
 <!--<a href="/">Back</a>-->
 <%= link_to 'Back', root_path %>
