Adding Phone Book

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to the application</h1>
-<%= link_to 'About', about_path %>
+<%= link_to 'About', about_path, class:'btn btn-primary'%>
+<%#= link_to 'Mobile Contacts', new_phone_directories_path %>
+<%= link_to 'Add contact', phone_directories_path, class:'btn btn-success'%>
