--- a/app/views/phone_directories/_form.html.erb
+++ b/app/views/phone_directories/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :phone, style: "display: block" %>
-    <%= form.number_field :phone, class:'form-control', placeholder:'Phone Number' %>
+    <%= form.text_field :phone, class:'form-control', placeholder:'Phone Number' %>
   </div>
 
   <div>
