--- a/app/views/phone_directories/_phone_directory.html.erb
+++ b/app/views/phone_directories/_phone_directory.html.erb
@@ -10,7 +10,8 @@
 
         <div class="list">
           <span class="badge bg-success">Phone</span>
-          <a href="tel:<%= phone_directory.phone %>"><%= phone_directory.phone %></a>
+          <span class="badge bg-primary"><%=  phone_directory.phone %></span>
+<!--          <a href="tel:<%#= phone_directory.phone %>"><%#= phone_directory.phone %></a>-->
         </div>
       </p>
 
